<resources>
    <string name="app_name">RawMixApp</string>
    <string name="Shale">Shale</string>
    <string name="limestone">Limestone</string>
    <string name="shale">Shale</string>
    <string name="iron_ore">Iron Ore</string>
    <string name="sio">SiO₂</string>
    <string name="al_o">Al₂O₃</string>
    <string name="_3_materials_lsf_amp_am"><![CDATA[Control 3X (LSF & AM)]]></string>
    <string name="recipe_lsf_and_am"><![CDATA[Recipe 3X (LSF & AM)]]></string>
    <string name="_3_materials_lsf_amp_sm"><![CDATA[Control 3X (LSF & SM)]]></string>
    <string name="_4_materials_lsf_sm_amp_am"><![CDATA[Control 4X (LSF,SM & AM)]]></string>
    <string name="am">AM</string>
    <string name="so">SO₃</string>
    <string name="_100_0">0.00</string>
    <string name="fuel_and_kiln_feed">Fuel And Kiln Feed</string>
    <string name="recipe_lsf_and_sm"><![CDATA[Recipe 3X (LSF & AM)]]></string>
    <string name="recipe_lsf_sm_amp_am"><![CDATA[Recipe 4X (LSF,SM & AM)]]></string>
    <string name="fuel_and_clinker_factor">Fuel &amp; Clinker Factor</string>
    <string name="raw_mix_design">Raw Mix Design</string>
    <string name="graph">Other information</string>
    <string name="previous_information_data_list">Previous Information Data List</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>